--- a/resources/assets/sass/base/_backgrounds.scss
+++ b/resources/assets/sass/base/_backgrounds.scss
@@ -40,6 +40,7 @@ $_img-blur-size: 2px;
   right: -$_img-blur-size;
   bottom: -$_img-blur-size;
   left: -$_img-blur-size;
+  line-height: 0;
 }
 
 .bg-elements .bg--gallery {
